@@ -12,7 +12,8 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Objects;
+import java.util.concurrent.CompletableFuture;
 import java.util.stream.Stream;
 
 public final class Campaign {
@@ -88,26 +89,37 @@ public final class Campaign {
         .map(Path::getFileName)
         .map(Path::toString)
         .map(s -> s.substring(0, s.lastIndexOf(".dsav")))
-        .map(this::loadGame)
-        .findFirst().orElse(null);
+        .map(filename -> {
+          try {
+            return this.loadGame(filename);
+          } catch(final InvalidSaveException e) {
+            LOGGER.info("Failed to load save", e);
+            return null;
+          }
+        })
+        .filter(Objects::nonNull)
+        .findFirst().orElseGet(() -> new InvalidSavedGame(this, ""));
     } catch(final Throwable e) {
       LOGGER.info("Failed to load save", e);
       return null;
     }
   }
 
-  public List<SavedGame> loadAllSaves() {
-    final List<SavedGame> saves = new ArrayList<>();
+  public List<CompletableFuture<SavedGame>> loadAllSaves() {
+    final List<CompletableFuture<SavedGame>> saves = new ArrayList<>();
 
     for(final Path child : this.getSaves()) {
       final String filename = child.getFileName().toString();
       final String name = filename.substring(0, filename.lastIndexOf('.'));
 
-      try {
-        saves.add(this.loadGame(name));
-      } catch(final InvalidSaveException e) {
-        saves.add(SavedGame.invalid(name));
-      }
+      saves.add(new CompletableFuture<SavedGame>().completeAsync(() -> {
+        try {
+          return this.loadGame(name);
+        } catch(final InvalidSaveException e) {
+          LOGGER.warn("Failed to load save " + filename, e);
+          return new InvalidSavedGame(this, name);
+        }
+      }));
     }
 
     return saves;
@@ -123,11 +135,10 @@ public final class Campaign {
     final FileData data;
     try {
       data = new FileData(Files.readAllBytes(file));
-    } catch(final IOException e) {
+      return this.manager.loadData(this, filename, data);
+    } catch(final Throwable e) {
       throw new InvalidSaveException("Failed to load saved game " + filename, e);
     }
-
-    return this.manager.loadData(this, filename, data);
   }
 
   private List<Path> getSaves() {
@@ -142,7 +153,7 @@ public final class Campaign {
     try(final Stream<Path> children = IoHelper.childrenSortedByDate(campaignPath, SaveManager.SAVE_MATCHER)) {
       return children
         .map(Path::getFileName)
-        .collect(Collectors.toList());
+        .toList();
     } catch(final IOException e) {
       throw new RuntimeException(e);
     }
